--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="clock">
-        <div class="hand hours"></div>
-        <div class="hand minutes"></div>
-        <div class="hand seconds"></div>
+        <img src="bg1.png" alt="djhs">
+        <div class="hand hour" data-hour-hand></div>
+        <div class="hand minute" data-minute-hand></div>
+        <div class="hand second" data-second-hand></div>
 
         <div class="number number1">1</div>
         <div class="number number2">2</div>
